bugfixes, refactoring, etc
